--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
 .wrapper {
     text-align: center;
     background: url(../images/secondbackground.jpeg);
+    margin-top: 50px;
     margin-left: 20%;
     margin-right: 20%;
     padding: 100px;
